# hr_bot

./: .gitignore  asgi.py  main.py  pyproject.toml  requirements.txt  start.sh
bot/: loader.py
bot/dao/: base.py
bot/data/: .env.dist  config.py
bot/handlers/balance/: keyboards.py  router.py
bot/handlers/error/: exceptions.py  router.py
bot/handlers/hr/: dao.py  keyboards.py  models.py  router.py  schemas.py  services.py  states.py  utils.py
bot/handlers/start/: keyboards.py  router.py
bot/utils/: commands.py  database.py  router.py
migrations/: env.py
migrations/versions/: 1ca8c1ebe4eb_database_creation.py  20b6e70455b6_database_creation.py  ef9c12b169ac_database_creation.py
web/: main.py
web/templates/: get_sys_prompts.html
